tests/NormalTests/paczka2/big_fuzzy/30203274.err
Error in line 7: A988 A702 -2,3
Error in line 2: QmFa7U S28 0,3
Error in line 6: sinD6Usb S28 60,9
Error in line 12: XObWmMPc5DD A988 60,5
Error in line 13: sinD6Usb A163 45,8
Error in line 20: sinD6Usb S28 96,1
Error in line 25: QmFa7U A702 32,5
Error in line 18: A988 A702 31,7
Error in line 38: QmFa7U A988 88,9
Error in line 47: X2JHl A988 -2,2
Error in line 55: A988 A702 17,6
Error in line 57: A988 A988 7,2
Error in line 56: jxI0 A988 96,5
Error in line 44: X2JHl A988 59,8
Error in line 69: sinD6Usb A702 2Û,0
Error in line 61: XObWmMPc5DD A988 55,4
Error in line 78: jxI0 S28 310,8
Error in line 73: X2JHl S28 137,1
Error in line 85: jxI0 A988 51,3
Error in line 93: jxI0 S28 43,2
Error in line 90: sinD6Usb A702 35,8
Error in line 101: XObWmMPc5DD A163 90,9
Error in line 100: A988 A988 82,7
Error in line 98: QmFa7U A163 45,0
Error in line 103: XObWmMPc5DD A988 37,7
Error in line 105: A988 S28 50,3
Error in line 111: XObWmMPc5DD A702 81,8
Error in line 120: DpursJ6 A988 36,2
Error in line 123: DpursJ6 A163 81,0
Error in line 143: X2JHl A988 87,8
Error in line 149: DpursJ6 A702 15,4
Error in line 162: ?S 8
Error in line 158: X2JHl A702 12,5
Error in line 159: A988 S28 98,9
Error in line 172: XObWmMPc5DD A702 æ2,æ
Error in line 170: A988 A988 80,0
Error in line 175: XObWmMPc5DD S28 13,7
Error in line 187: QmFa7U A702 75,9
Error in line 202: QmFa7U S28 288,3
Error in line 205: QmFa7U A988 74,4
Error in line 211: A988 A163 204,8
Error in line 208: QmFa7U A163 66,5
Error in line 215: XObWmMPc5DD A702 58,9
Error in line 224: DpursJ6 A702 71,2
Error in line 238: A988 S28 59,0
Error in line 242: XObWmMPc5DD A702 82,6
Error in line 241: A988 A988 20,9
